kubernetes/crawler-master-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: crawler-master
  labels:
    app: crawler-master
spec:
  selector:
    app: crawler-master
  type: NodePort
  ports:
    - port: 80
      targetPort: 8081
      name: http
    - port: 9091
      name: grpc
